Fixed issue with background image not covering completely. Finished view of my brewery.

--- a/src/main/webapp/src/app/Dashboard/dashboard.style.css
+++ b/src/main/webapp/src/app/Dashboard/dashboard.style.css
@@ -12,7 +12,7 @@
 .dashboardCheersBackground {
   background-image: url('../../assets/cheers.jpg');
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .dashboardButtonsRow {
