--- a/src/main/webapp/src/app/LandingPage/landing-page.style.css
+++ b/src/main/webapp/src/app/LandingPage/landing-page.style.css
@@ -1,23 +1,3 @@
-:host ::ng-deep .mat-input-placeholder {
-  color: white;
-}
-
-:host ::ng-deep .mat-focused .mat-form-field-label {
-  color: darkorange;
-}
-
-:host ::ng-deep .mat-form-field-underline {
-  background-color: white;
-}
-
-:host ::ng-deep .mat-raised-button.mat-primary[disabled], .mat-raised-button.mat-accent[disabled],
-.mat-raised-button.mat-warn[disabled], .mat-raised-button[disabled][disabled], .mat-fab.mat-primary[disabled],
-.mat-fab.mat-accent[disabled], .mat-fab.mat-warn[disabled], .mat-fab[disabled][disabled],
-.mat-mini-fab.mat-primary[disabled], .mat-mini-fab.mat-accent[disabled], .mat-mini-fab.mat-warn[disabled],
-.mat-mini-fab[disabled][disabled] {
-  background-color: gray;
-}
-
 .landingPageSmallIcon {
   height: 50px;
   margin-bottom: 40px;
@@ -41,7 +21,7 @@
 .landingPageWoodBackground {
   background-image: url('../../assets/WoodPatternDark.png');
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .landingPageTitleText {
