--- a/src/main/webapp/src/app/app.style.css
+++ b/src/main/webapp/src/app/app.style.css
@@ -1,3 +1,23 @@
+:host ::ng-deep .mat-input-placeholder {
+  color: gray;
+}
+
+:host ::ng-deep .mat-focused .mat-form-field-label {
+  color: darkorange;
+}
+
+:host ::ng-deep .mat-form-field-underline {
+  background-color: white;
+}
+
+:host ::ng-deep .mat-raised-button.mat-primary[disabled], .mat-raised-button.mat-accent[disabled],
+.mat-raised-button.mat-warn[disabled], .mat-raised-button[disabled][disabled], .mat-fab.mat-primary[disabled],
+.mat-fab.mat-accent[disabled], .mat-fab.mat-warn[disabled], .mat-fab[disabled][disabled],
+.mat-mini-fab.mat-primary[disabled], .mat-mini-fab.mat-accent[disabled], .mat-mini-fab.mat-warn[disabled],
+.mat-mini-fab[disabled][disabled] {
+  background-color: gray;
+}
+
 .appSideNavLogoImg {
   width: 80%;
   margin-top: 20px;
